packages/core/src/components/bce-dropdown-menu/bce-dropdown-menu.scss
bce-dropdown-menu {
  @include bce-color(primary);
  display: inline-block;

  .dropdown-button {
    cursor: pointer;
  }

  .bce-dropdown-menu-items {
    @include elevate(8);
    display: none;
    background-color: bce-color();
    border-radius: 4px;
    transition: opacity 0.3s ease-in-out;
    opacity: 0;

    &[data-active] {
      display: block;
      opacity: 1;
    }
  }
}

bce-dropdown-menu bce-button {
  @include elevate(0);
  display: flex;
  background-color: transparent;
  color: bce-color-t();
  overflow: inherit;
  z-index: inherit;

  > button {
    margin: 0;
  }

  > bce-icon {
    order: -1;
    margin: 0;
    padding: 9px 0 9px 12px;
  }

  &:not([disabled]):focus,
  &:not([disabled]):hover {
    @include elevate(0);
    z-index: inherit;
  }

  &[disabled] {
    opacity: 1;
    color: inherit;
    background-color: inherit;
    z-index: 0;
  }
}

